--- a/Becca/Index.html
+++ b/Becca/Index.html
@@ -202,8 +202,8 @@
                 <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"/></div>
                 <div class="contact-info">
                     <h1>Adress</h1>
-                    <h2>Rinkeby</h2>
                     <h2>Stockholm</h2>
+                    <h2>Sweden</h2>
                 </div>
             </div>
         </div>
