Ändrat artistic statemen

--- a/Becca/Index.html
+++ b/Becca/Index.html
@@ -6,7 +6,7 @@
     <title>My Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="changeImage()">
     <!-- header -->
     <section id="header">
         <div class="header container">
@@ -30,7 +30,7 @@
     <!-- end header -->
 
     <!-- Hero section -->
-    <section id="hero">
+    <section id="hero" >
         <div class="hero container">
             <div>
                 <h1>Hello, <span></span></h1>
@@ -166,9 +166,10 @@
         <div class="col-right">
             <h1 class="section-title">About <span>me</span></h1>
             <h2>Boss Lady</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deserunt dolores eaque in
-                iusto laboriosam laudantium rem voluptate. Adipisci blanditiis deserunt est
-                facere molestiae non saepe sapiente sed, sunt vel.</p>
+            <p>Om det jag gör ger <strong>mig</strong> glädje, lust och nyfikenhet så är det bra. <br>
+            Om det jag gör ger <strong>dig</strong> en känsla av mening och upprymdhet så är det bättre. <br>
+            Om det jag gör ser förbi dina och mina känslor pch behov och sätter ett större <strong>sammanhang</strong>
+             i fokus, så har jag nått mitt mål.</p>
             <a href="#" class="cta">Download Resume</a>
         </div>
     </div>
